# EDA_intelligence_Agent

./: .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt
AGENTS/: cleaning_agent.py  data_understanding_agent.py  insight_agent.py  nl_to_sql_agent.py  recommendation_agent.py  report_agent.py  sql_agent.py  sql_answer_agent.py  statistics_agent.py  visualization_agent.py
FILE_input/: file_input.py
WORKFLOW/: langgraph_workflow.py
